force-app/main/default/objects/Available_Equipment__c/Available_Equipment__c.object-meta.xml
<CustomObject>
    <description>Junction object to link equipment to facilities that it can be made available for</description>
    <label>Available Equipment</label>
    <nameField>
        <displayFormat>AE-{00000}</displayFormat>
        <label>Available Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Available Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>