force-app/main/default/objects/Available_Equipment__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <referenceTo>TREX1__Equipment__c</referenceTo>
    <relationshipLabel>Available Equipment</relationshipLabel>
    <relationshipName>Available_Equipment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>