force-app/main/default/objects/Available_Equipment__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <label>Facility</label>
    <referenceTo>TREX1__Facility__c</referenceTo>
    <relationshipLabel>Available Equipment</relationshipLabel>
    <relationshipName>Available_Equipment</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>