force-app/main/default/objects/Available_Equipment__c/fields/Total_Quantity_Bookable__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_Bookable__c</fullName>
    <formula>Equipment__r.TREX1__Total_Quantity_Bookable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Quantity Bookable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>